src/test/ui/issue-59764.stderr
error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:14:33
   |
LL |     use issue_59764::foo::{baz, makro};
   |                                 ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{baz}};
   |                      ^^^^^^^^^       --^^

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:21:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:28:9
   |
LL |         makro
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:33:33
   |
LL |     use issue_59764::foo::{baz, makro, foobar};
   |                                 ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{baz, foobar}};
   |                      ^^^^^^^^^         --      ^^

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:40:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |         foobar,
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:48:9
   |
LL |         makro,
   |         ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foo::{
LL |         baz,
LL |
LL |         foobar
LL |     }};
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:54:31
   |
LL |     use issue_59764::{foobaz, foo::makro};
   |                               ^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz};
   |                      ^^^^^^^      --

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:59:42
   |
LL |     use issue_59764::{foobaz, foo::{baz, makro}};
   |                                          ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz, foo::{baz}};
   |                      ^^^^^^^                 --

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:68:13
   |
LL |             makro,
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:78:13
   |
LL |             makro
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:84:42
   |
LL |     use issue_59764::{foobaz, foo::{baz, makro, barbaz::{barfoo}}};
   |                                          ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, foobaz, foo::{baz, barbaz::{barfoo}}};
   |                      ^^^^^^^                   --

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:93:13
   |
LL |             makro,
   |             ^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro, 
LL |         foobaz,
LL |         foo::{
LL |             baz,
LL |
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:102:9
   |
LL |     use issue_59764::foo::makro as baz;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::makro as baz;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:107:33
   |
LL |     use issue_59764::foo::{baz, makro as foobar};
   |                                 ^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |     use issue_59764::{makro as foobar, foo::{baz}};
   |                      ^^^^^^^^^^^^^^^^^^^       --^^

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:120:17
   |
LL |                 makro as foobar}
   |                 ^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL |         issue_59764::{makro as foobar, 
LL | 
LL |             foobaz,
LL | 
LL | 
LL |             foo::{baz}
   |

error[E0432]: unresolved import `issue_59764::foo::makro`
  --> $DIR/issue-59764.rs:127:5
   |
LL | use issue_59764::foo::makro;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ no `makro` in `foo`
   |
   = note: this could be because a macro annotated with `#[macro_export]` will be exported at the root of the crate instead of the module where it is defined
help: a macro with this name exists at the root of the crate
   |
LL | use issue_59764::makro;
   |     ^^^^^^^^^^^^^^^^^^

error: cannot determine resolution for the macro `makro`
  --> $DIR/issue-59764.rs:130:1
   |
LL | makro!(bar);
   | ^^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/issue-59764.rs:134:5
   |
LL |     bar();
   |     ^^^ not found in this scope

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0425, E0432.
For more information about an error, try `rustc --explain E0425`.
